--- a/src/app/seguridad/login/login.component.html
+++ b/src/app/seguridad/login/login.component.html
@@ -1,22 +1,29 @@
+
+
 <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-md-6">
-        <h2 class="text-center">Iniciar sesión</h2>
-  
-        <form>
-          <div class="form-group">
-            <label for="username">Nombre de usuario:</label>
-            <input type="text" id="username" class="form-control">
-          </div>
-  
-          <div class="form-group">
-            <label for="password">Contraseña:</label>
-            <input type="password" id="password" class="form-control">
-          </div>
-  
-          <button class="btn btn-primary btn-block">Iniciar sesión</button>
-        </form>
-      </div>
+  <div class="login-form">
+    <h2 class="text-center">Iniciar sesión</h2>
+
+    <div class="icon">
+      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+        <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
+      </svg>
     </div>
+
+    <form>
+      <div class="form-group">
+        <label for="username">Nombre de usuario:</label>
+        <input type="text" id="username" class="form-control">
+      </div>
+      
+      <br>
+
+      <div class="form-group">
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" class="form-control">
+      </div>
+      <br>
+     <button class="btn btn-dark btn-block">Iniciar sesión</button>
+    </form>
   </div>
-  
+</div>
