--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,7 @@
 <footer class="footer">
     <div class="container">
-      <p class="footer-text">Información de contacto</p>
+      <h6 class="footer-text">Información de contacto:</h6>
+      <p class="footer-text">........................</p>
       <ul class="footer-links">
         <li><a href="#">Acerca de</a></li>
         <li><a href="#">Términos de servicio</a></li>
